Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6088

racer test_1: dir_create.sh mutex deadlock in sys_open->do_lookup

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.7.0
    • Lustre 2.7.0
    • 3
    • 16947

      This issue was created by maloo for Andreas Dilger <andreas.dilger@intel.com>

      This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/9ec8122a-9608-11e4-af28-5254006e85c2.

      The sub-test test_1 failed with the following logs on the client console:

      INFO: task dir_create.sh:5686 was blocked for more than 120s
      Call trace:
      mutex_lock+0x2b/0x50
      do_lookup+0x11b/0x230
      __link_path_walk+0x200/0x1000
      path_walk+0x6a/0xe0
      do_filp_open+0x1fa/0xd20
      do_sys_open+0x69/0x140
      sys_open+0x20/0x30
      

      It looks like this is only being hit with both master client and master server (pre-2.7.0) so is very likely related to DNE striped directories and is a regression on master (possibly due to the addition of a new racer test for striped directories?). Combinations of 2.4/2.5/2.6/master client or server do not hit this problem.

      It would be nice to get the LU-4712 patch http://review.whamcloud.com/9689 landed to clean up the DNE striped directory console messages, but this case doesn't have the client oops, just stuck threads.

      Info required for matching: racer 1

            di.wang Di Wang (Inactive)
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: